# asr_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/asr/: __init__.py  audio_io.py  checkpoint.py  cli.py  download.py  engine.py  models.py  output.py  vad.py
